# ref

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
01_fundamentals/: 02_variables_and_data_types.md  04_operators.md  08_user_input.md
02_builtin_types/float/: README.md  mechanics.py
02_builtin_types/float_behavior/: README.md  mechanics.py
02_data_structures/: 01_strings.md  02_lists.md  03_tuples.md  04_sets.md  05_dictionaries.md  06_mutability_and_copying.md  07_comprehensions.md
cs_fundamentals/: pyproject.toml
dsa/: pyproject.toml
dsa/01_complexity_analysis/asymptotic_notation/: README.md  cards.md  mechanics.py
python/: pyproject.toml
python/02_builtin_types/float/: README.md  cards.md  mechanics.py
tests/: test_mechanics.py
tools/: anki_gen.py
