[project]
name = "senior-python-prep"
version = "0.1.0"
description = "Senior Python SWE Interview Preparation"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
# E: pycodestyle, F: pyflakes, I: isort, B: flake8-bugbear, UP: pyupgrade, S: flake8-bandit
select = ["E", "F", "I", "B", "UP", "S"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# S101: Allow assert statements in tests
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
addopts = "-v --strict-markers"
testpaths = []