# ── ref/dsa/pyproject.toml ────────────────────────────────────────────────

[project]
name = "ref-dsa"
version = "0.1.0"
description = "Data structures, algorithms & complexity analysis — reference."
requires-python = ">=3.13"
dependencies = []

[tool.uv]
# Not an installable library — a collection of runnable topic scripts. Don't build it.
package = false